<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/icon_home"
        android:orderInCategory="0"
        android:title="@string/home" />

    <item
        android:id="@+id/Item"
        android:icon="@drawable/baseline_checklist_24"
        android:orderInCategory="1"
        android:title="@string/item_menu" />

    <item
        android:id="@+id/Favourite"
        android:icon="@drawable/icon_heart"
        android:orderInCategory="2"
        android:title="@string/favourite_item" />

    <item
        android:id="@+id/Cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:orderInCategory="3"
        android:title="@string/cart" />
    <item
        android:id="@+id/Order"
        android:icon="@drawable/icon_payment"
        android:orderInCategory="4"
        android:title="@string/order" />

</menu>